baml_language/crates/baml_cli/src/snapshots/baml_cli__describe_command_tests__render_describe_truncation_hint.snap
---
source: crates/baml_cli/src/describe_command_tests.rs
expression: output
---
class String  <builtin>/baml/string.baml:5

/// A UTF-8 encoded string.
///
/// String literals use double quotes: `"hello"`. Multiline strings use the `#"..."#` syntax.
/// All methods returning a new string do not mutate `self` unless noted otherwise.
class String {
  /// Serializes this string to a JSON value.
  //baml:mut_vm
  function to_json(self) -> baml.json.json {
    $rust_function
  }

  /// Returns the length of the string in **UTF-8 bytes**.
  ///
  /// This is `O(1)`. For ASCII text the byte length equals the character
  [... skipped 464 lines ...]
  ///
  /// # Examples
  /// ```
  /// string.from_code_points([104, 105])         // "hi"
  /// string.from_code_points([233])              // "é"
  /// string.from_code_points([128017])           // "🐑"
  /// string.from_code_points([-1])               // throws — out of range
  /// string.from_code_points([55296])            // throws — surrogate (U+D800)
  /// ```
  function from_code_points(unicode: int[]) -> string throws root.errors.InvalidArgument {
    $rust_function
  }
}

[INFO] Showing 29 of 491 lines. Use --budget 492 for full output.

references (0):
