baml_language/crates/baml_cli/src/snapshots/baml_cli__describe_command_tests__render_keyword_associated.snap
---
source: crates/baml_cli/src/describe_command_tests.rs
expression: output
---
associated — Explains associated types on interfaces.

Syntax:
  interface Parser {
    type Output
    function parse(self, input: string) -> Self.Output
  }
  
  class IntParser {
    implements Parser {
      type Output = int
      function parse(self, input: string) -> Self.Output {
        return 42
      }
    }
  }
  
  function parse_one<P extends Parser>(parser: P) -> P.Output {
    return parser.parse("42")
  }

Associated types are declared inside interfaces with `type Name`, optionally with `extends Bound` and/or `= Default`. Implementors bind them inside `implements` blocks with `type Name = Concrete`. In type positions, use `Interface<Name = Type>` to require a binding, `T.Name` or `Self.Name` to project from a bound type, and `(T as Interface).Name` to disambiguate when multiple required interfaces define the same associated type. Generic bounds use `T extends Interface<Name = Type>`, not `T: Interface<Name = Type>`.
