baml_language/crates/baml_cli/src/snapshots/baml_cli__describe_command_tests__render_keyword_baml_sdk.snap
---
source: crates/baml_cli/src/describe_command_tests.rs
expression: output
---
baml_sdk — Call your BAML functions from another language via a generated SDK.

Syntax:
  # 1. declare a generator in baml.toml
  [generator.app]
  output_type = "python/pydantic"   # python/pydantic | python/pydantic/v1 | typescript/node
  output_dir  = "../app"
  naming_convention = "preserve-case"   # preserve-case | language
  
  # 2. generate the typed client
  baml generate

`baml generate` reads every [generator.<name>] section in baml.toml and emits
a typed `baml_sdk` package into each output_dir. Install the runtime for your
language, import the generated package, and call your functions with native
types. Per-language install + usage:

  baml describe python
  baml describe typescript
