baml_language/crates/baml_cli/src/snapshots/baml_cli__describe_command_tests__render_keyword_check.snap
---
source: crates/baml_cli/src/describe_command_tests.rs
expression: output
---
check — Explains how to ask the CLI to validate a project.

Syntax:
  baml check --from .
  baml run --list --from .

`baml check` compiles the project and reports compiler errors without running anything — the most direct way to validate. Other commands (`baml run`, `baml run --list`, `baml fmt`, `baml test`) also load and check the project before their main work. Use `baml run --list` when you additionally want the compiled function signatures.
