baml_language/crates/baml_cli/src/snapshots/baml_cli__describe_command_tests__render_keyword_class.snap
---
source: crates/baml_cli/src/describe_command_tests.rs
expression: output
---
class — Defines a structured data type with named fields.

Syntax:
  class MyClass {
    field1 string
    field2 int
  }

Fields can have default values, docstrings, and attributes.
