baml_language/crates/baml_cli/src/snapshots/baml_cli__describe_command_tests__render_keyword_defer.snap
---
source: crates/baml_cli/src/describe_command_tests.rs
expression: output
---
defer — Schedules a block to run when the enclosing block exits, in LIFO order.

Syntax:
  function process(path: string) -> string {
    let handle = FileHandle { path: path }
    defer {
      handle.cleanup()
    }
    return handle.read()
  }

`defer { ... }` registers a block that runs on every exit of the enclosing block — normal completion, `return`, `break`/`continue`, and error unwinding — so it is the standard way to release a resource exactly once on all paths. Several defers in the same scope run in LIFO order: the last one declared runs first. The body reads the live enclosing scope at exit; it is not a closure that captures values at the `defer` site. A `throw` inside the body is allowed, but a `return`/`break`/`continue` that would escape the body is rejected. See `baml describe cleanup` for the per-instance finalizer that `defer` commonly invokes.
